# master_ciencia_de_datos

./: .gitignore  README.md
camilo_martinez_actividad/: README.md  menu.py  tables_creation.cql
camilo_martinez_actividad/crud/: clases_tablas.py  deletes.py  inserts.py  selects.py  updates.py  utils.py
estadistica/actividad_1/: exploratory_analysis_icfes_data.ipynb  lr_models.Rmd  lr_models.nb.html  lr_models2.Rmd  lr_models2.nb.html  pyproject.toml
estadistica/actividad_2/: analisis_serie_tiempo.Rmd  analisis_serie_tiempo.nb.html  pyproject.toml  report_accidentes_eda.ipynb
fundamentos_tecnologia/: load_accounts_mongodb.ipynb  process_twitter_data_mongodb.ipynb  pyproject.toml
mineria-de-datos/: data-processing.ipynb  requirements.txt
procesamiento_datos_masivos/actividad1/: README.md
procesamiento_datos_masivos/actividad1/punto1/: README.md
procesamiento_datos_masivos/actividad1/punto2/: README.md
procesamiento_datos_masivos/actividad1/punto3/: README.md
procesamiento_datos_masivos/actividad2/: README.md  actividad2_spark.ipynb
procesamiento_datos_masivos/actividad2/punto1/: README.md
procesamiento_datos_masivos/actividad2/punto2/: README.md
procesamiento_datos_masivos/actividad2/punto3/: README.md
sistemas_almacenamiento/: README.html  README.md  actividad2.py  actividad2_notebook.ipynb  creation_classes.py  menu.py  pyproject.toml  tablero_consultas.py  tables_creation.cql
sistemas_almacenamiento/crud/: clases_tablas.py  deletes.py  inserts.py  precarga_datos.py  selects.py  updates.py  utils.py
(+25 files in other folders)
