[tool.poetry]
name = "fundamentos-tecnologia"
version = "0.1.0"
description = ""
authors = ["Camilo Martinez <camilo.martinez@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
twython = "^3.9.1"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
pymongo = {extras = ["srv"], version = "^4.6.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
