[tool.poetry]
name = "sistemas-almacenamiento"
version = "0.1.0"
description = ""
authors = ["Camilo Martinez <camilo.martinez@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cassandra-driver = "^3.29.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
